# transactions-service/docs/swagger.yaml
@@ -1,4 +1,11 @@
 definitions:
+  model.MonthExpense:
+    properties:
+      amount:
+        type: number
+      month:
+        type: string
+    type: object
   model.Statistics:
     properties:
       amount:
@@ -44,6 +51,26 @@ info:
   title: Transactions Service API
   version: "1.0"
 paths:
+  /merchants/{id}/expenses:
+    get:
+      parameters:
+      - description: Merchant ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.MonthExpense'
+            type: array
+      summary: Retrieve transactions statistics by category
+      tags:
+      - statistics
   /statistics/{by}:
     get:
       parameters:
@@ -66,7 +93,6 @@ paths:
             type: array
       summary: Retrieve transactions statistics by category
       tags:
-      - transaction
       - statistics
   /transactions:
     get:
