# transactions-service/internal/model/statistics.go
@@ -1,7 +1,14 @@
 package model
 
+import "time"
+
 type StatisticsBy struct {
 	Name   string
 	Count  int
+	Amount float64
+}
+
+type MerchantExpense struct {
+	Month  time.Time
 	Amount float64
 }
